@@ -18,7 +18,9 @@ from django.contrib.auth.models import User
 from django.contrib.auth.tokens import default_token_generator
 from emailconfirmation.models import EmailAddress, EmailConfirmation
 
-from utils import get_default_redirect, user_display, complete_signup
+from allauth.utils import passthrough_login_redirect_url
+
+from utils import get_default_redirect, user_display, complete_signup 
 from forms import AddEmailForm, ChangePasswordForm
 from forms import LoginForm, ResetPasswordKeyForm
 from forms import ResetPasswordForm, SetPasswordForm, SignupForm
@@ -54,6 +56,8 @@ def login(request, **kwargs):
     
     ctx = {
         "form": form,
+        "signup_url": passthrough_login_redirect_url(request,
+                                                     reverse("account_signup")),
         "site": Site.objects.get_current(),
         "url_required": url_required,
         "redirect_field_name": redirect_field_name,
@@ -81,6 +85,8 @@ def signup(request, **kwargs):
     else:
         form = form_class()
     ctx = {"form": form,
+           "login_url": passthrough_login_redirect_url(request,
+                                                       reverse("account_login")),
            "redirect_field_name": redirect_field_name,
            "redirect_field_value": request.REQUEST.get(redirect_field_name) }
     return render_to_response(template_name, RequestContext(request, ctx))
