@@ -9,8 +9,6 @@
 
 {% block body %}
     
-{% url account_signup as signup_url %}
-
 <h1>{% trans "Sign In" %}</h1>
 
 {% if not user.is_authenticated %}
